[gd_scene load_steps=3 format=3 uid="uid://bocbyhou8kplp"]

[ext_resource type="Script" uid="uid://dxk8m5n2q3pqr" path="res://coop/scripts/combo_attack_ui.gd" id="1_combo_ui"]
[ext_resource type="Texture2D" uid="uid://b8vjo1cktgop" path="res://assets/UI/Banners/Carved_3Slides.png" id="2_x34in"]

[node name="ComboAttackUI" type="CanvasLayer"]
script = ExtResource("1_combo_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -78.0
offset_right = 196.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="AbilityContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -17.0
offset_right = 49.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2

[node name="NinePatchRect" type="NinePatchRect" parent="Control/AbilityContainer"]
layout_mode = 2
texture = ExtResource("2_x34in")

[node name="HBoxContainer" type="HBoxContainer" parent="Control/AbilityContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/AbilityContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="AbilityName" type="Label" parent="Control/AbilityContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.29586652, 0.2958665, 0.2958665, 1)
theme_override_font_sizes/font_size = 18
text = "Dash Combo"
vertical_alignment = 1

[node name="AbilityKey" type="Label" parent="Control/AbilityContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.29954743, 0.2995475, 0.29954726, 1)
theme_override_font_sizes/font_size = 11
text = "Double Click"
vertical_alignment = 1

[node name="CooldownOverlay" type="ColorRect" parent="Control/AbilityContainer"]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.7)

[node name="CooldownText" type="Label" parent="Control/AbilityContainer/CooldownOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "5s"
horizontal_alignment = 1
vertical_alignment = 1
